--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,10 @@
+<!––
+Lets do some changes
+-->
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <link rel="icon" type="image/png" href="assets/git.png">
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
