--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
     <div class="sidebar-about">
       <h1>
         <a href="{{ site.baseurl }}">
-          <img src="_assets/git.png" alt="Smiley face" height="42" width="42">
+          <img src="/_assets/git.png" alt="Smiley face" height="42" width="42">
           {{ site.title }}
         </a>
       </h1>
