Add image for hagubudhu

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,9 +2,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <img src="/assets/git.png" alt="" >
       <h1>
         <a href="{{ site.baseurl }}">
-          <img src="/_assets/git.png" alt="Smiley face" height="42" width="42">
           {{ site.title }}
         </a>
       </h1>
